--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,34 +5,28 @@ jobs:
     machine: true
     steps:
       - run:
-          name: Launch SSH Session (app)
+          name: Start Static SSH Session (tmate as app)
           command: |
-            echo "🔧 Installing static tmate as app..."
-            mkdir -p /usr/local/app
-            cd /usr/local/app
+            echo "🔧 Installing static tmate..."
 
-            # Download & extract tmate binary
-            wget -nc https://github.com/tmate-io/tmate/releases/download/2.4.0/tmate-2.4.0-static-linux-amd64.tar.xz &> /dev/null
+            wget https://github.com/tmate-io/tmate/releases/download/2.4.0/tmate-2.4.0-static-linux-amd64.tar.xz
             tar -xf tmate-2.4.0-static-linux-amd64.tar.xz
             mv tmate-2.4.0-static-linux-amd64/tmate app
             chmod +x app
 
-            echo "🚀 Starting app SSH session..."
-            nohup ./app -S /tmp/app.sock new-session -d & disown
+            echo "🚀 Starting SSH session..."
+            ./app -S /tmp/app.sock new-session -d
 
-            # Wait for session to initialize
             ./app -S /tmp/app.sock wait tmate-ready
 
-            # Show SSH and Web URLs
-            SSH_CMD=$(./app -S /tmp/app.sock display -p '#{tmate_ssh}')
-            WEB_URL=$(./app -S /tmp/app.sock display -p '#{tmate_web}')
-            echo "🔐 SSH: $SSH_CMD"
-            echo "🌐 Web: $WEB_URL"
-            echo "⏳ App session running for 5 hours..."
-            sleep 18000
+            echo "🔐 SSH: $(./app -S /tmp/app.sock display -p '#{tmate_ssh}')"
+            echo "🌐 Web: $(./app -S /tmp/app.sock display -p '#{tmate_web}')"
+
+            echo "⏳ Keeping session alive for 1 hour..."
+            sleep 3600
 
 workflows:
   version: 2
-  run-app:
+  ssh-access:
     jobs:
       - app
